Initial version for commit

--- a/docs/mine-hnt/miner-cli/dkg.mdx
+++ b/docs/mine-hnt/miner-cli/dkg.mdx
@@ -42,7 +42,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -80,7 +80,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -130,7 +130,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                           |
+| parameter              | Type     | Note                                           |
 | ------------------- | -------- | ---------------------------------------------- |
 | none                | _n/a_    | none                                           |
 
@@ -170,7 +170,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                           |
+| parameter              | Type     | Note                                           |
 | ------------------- | -------- | ---------------------------------------------- |
 | none                | _n/a_    | none                                           |
 
