--- a/docs/mine-hnt/miner-cli/genesis.mdx
+++ b/docs/mine-hnt/miner-cli/genesis.mdx
@@ -48,10 +48,10 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| old_genesis_file    | _filename_ | Filename path                        |
-| pubkey              | _b58_    | B58 public aaddress                    |
+| old_genesis_file    | _path_ | Filename path                        |
+| pubkey              | _b58_    | B58 public address                     |
 | proof               | _unkn_   | Need details                           |
 | addrs               | _unkn_   | Need details                           |
 
@@ -83,14 +83,14 @@ _Switches_
 
 | switch              | parameter | Note                                   |
 | ------------------- | --------- | -------------------------------------- |
-| none                | _n/a_    | none                                   |
+| none                | _n/a_    | none                                    |
 
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| pubkey              | _b58_    | B58 public aaddress                    |
+| pubkey              | _b58_    | B58 public address                     |
 | key_proof           | _unkn_   | Need details                           |
 | addrs               | _unkn_   | Need details                           |
 
@@ -127,9 +127,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| genesis_file    | _filename_ | Filename path                            |
+| genesis_file    | _path_ | Filename path                            |
 
 </TabItem>
 <TabItem value="output">
@@ -165,9 +165,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| path                | _filename_ | Filename path                            |
+| path                | _path_ | Filename path                            |
 
 </TabItem>
 <TabItem value="output">
@@ -203,7 +203,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -241,7 +241,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | privkey               | _unkn_    | Need info                                  |
 
@@ -278,9 +278,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| txn_list_output_path| _filename_ | Filename path                        |
+| txn_list_output_path| _path_ | Filename path                        |
 | masterkey           | _unkn_   | Need details                           |
 </TabItem>
 <TabItem value="output">
@@ -315,12 +315,12 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| path_to_txn_list    | _filename_ | Filename path                        |
-| n                   | _unkn_   | Need details                           |
+| path_to_txn_list    | _path_ | Filename path                        |
 | addrs               | _unkn_   | Need details                           |
-| curv                | _unkn_   | Need details                           |
+| n                   | _unkn_   | Need details                           |
+| curve                | _unkn_   | Need details                           |
 
 
 </TabItem>
