--- a/docs/mine-hnt/miner-cli/minercli.mdx
+++ b/docs/mine-hnt/miner-cli/minercli.mdx
@@ -22,7 +22,7 @@ The github repository to review the code for the miner command is found [here](h
 
 ## Example page syntax
 
-The full usage details for all miner commands are located on dedicated command pages. There is one for each top-level command to keep the docs focused. A navgation menu will be on the right hand column to navigate through each sub command. There is a Tab for the Command "inputs" and example outputs of each command are also on an individual tab.
+The full usage details for all miner commands are located on dedicated command pages. There is one for each top-level command to keep the docs focused. A navgation menu will be on the right hand column to navigate through each sub command. There is a Tab for the Command "inputs" and example outputs of each command are also on an individual tab. Any switches inside `[]` are optional and may change the output of the command.
 
 ### Example
 ```bash
@@ -46,7 +46,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -73,8 +73,6 @@ listen_addrs (prioritized)
 
 
 ## Top Level Commands
-
-For additional details click [here](/mine-hnt/miner-cli/toplevel)
 
 ```bash
   foreground              Start release with output to stdout
