--- a/docs/mine-hnt/miner-cli/print_keys.mdx
+++ b/docs/mine-hnt/miner-cli/print_keys.mdx
@@ -34,7 +34,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
