--- a/docs/mine-hnt/miner-cli/snapshot.mdx
+++ b/docs/mine-hnt/miner-cli/snapshot.mdx
@@ -46,9 +46,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| filename            | _path_   | Full Path to the name of the file starting with /var/data/ |
+| filename            | _path_   | full path to the name of the file starting with /var/data/ |
 
 </TabItem>
 <TabItem value="output">
@@ -87,9 +87,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| filename            | _path_   | Full Path to the name of the file starting with /var/data/ |
+| filename            | _path_   | full path to the name of the file starting with /var/data/ |
 
 </TabItem>
 <TabItem value="output">
@@ -125,11 +125,11 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                           |
+| parameter           | Type     | Note                                           |
 | ------------------- | -------- | ---------------------------------------------- |
-| filename            | _path_   | Full Path to the name of the file starting with /var/data/ |
-| height              | _int_    | Height of the bock chain snapshot |
-| hash                | _hex_    | Hash (need type) of the snapshot hash |
+| height              | _int_    | Height of the bock chain snapshot              |
+| hash                | _hex_    | Hash (need type) of the snapshot hash          |
+| filename            | _path_   | full path to the name of the file starting with /var/data/ |
 
 </TabItem>
 <TabItem value="output">
@@ -147,7 +147,7 @@ _Parameters_
 miner snapshot diff <filename> <filename>
 ```
 
-  Compare two snapshot files for equality, returns the list of differences or \[\] if identical
+  Compare two snapshot files for equality, returns the list of differences or `[]` if identical
 
 :::info
 You will need to decompress the file before comparison at this time.
@@ -167,9 +167,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| filename            | _path_   | Full Path to the name of the file starting with /var/data/ |
+| filename            | _path_   | full path to the name of the file starting with /var/data/ |
 
 </TabItem>
 <TabItem value="output">
@@ -272,7 +272,7 @@ $ miner snapshot diff /var/data/snapshot /var/data/snapshot-2
 miner snapshot info <filename>
 ```
 
-Show information about snapshot in file \<filename\>
+Show information about snapshot in file <filename\>
 
 :::info
 You will need to decompress the file before comparison at this time.
@@ -292,9 +292,9 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
-| filename            | _path_   | Full Path to the name of the file starting with /var/data/ |
+| filename            | _path_   | full path to the name of the file starting with /var/data/ |
 
 </TabItem>
 <TabItem value="output">
@@ -318,7 +318,7 @@ Hash <<245,190,45,242,3,11,3,142,72,216,189,135,229,45,205,1,129,246,239,100,
 miner snapshot list
 ```
 
-Show information about snapshot in file \<filename\>
+Show information about snapshot in file <filename\>
 
 <Tabs
   block={true}
@@ -334,7 +334,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
