--- a/docs/mine-hnt/miner-cli/trace.mdx
+++ b/docs/mine-hnt/miner-cli/trace.mdx
@@ -37,13 +37,13 @@ _Switches_
 
 | switch              | parameter | Note                                   |
 | ------------------- | --------- | -------------------------------------- |
-| -l, --level         | _none|debug|info|notice|warning|error|critical|alert|emergency_     | outputs based on log level                  |
+| -l, --level         | _none\|debug\|info\|notice\|warning\|error\|critical\|alert\|emergency_     | outputs based on log level                  |
 | -o, --output        | _path_     | Path to filename                      |
 
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -77,7 +77,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
