--- a/docs/mine-hnt/miner-cli/txn.mdx
+++ b/docs/mine-hnt/miner-cli/txn.mdx
@@ -41,7 +41,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | none                | _n/a_    | none                                   |
 
@@ -88,7 +88,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | owner             | _b58 addr_ | The b58 address of the owner of the gateway to be added. |
 
@@ -140,7 +140,7 @@ _Switches_
 
 _Parameters_
 
-| param               | Type     | Note                                   |
+| parameter              | Type     | Note                                   |
 | ------------------- | -------- | -------------------------------------- |
 | owner               | _b58 addr_ | The b58 address of the owner of the gateway to be added. | 
 | location            | _h3_ or _lat,long_    | Either a h3 index or a comma separated geo location of the form (lat),(lon) |     
