Doc updates for sprint 76
Doc updates for sprint 76

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -46,7 +46,7 @@ Learn more about how to get started using Console with our Tips and Tricks video
 ### Configurations
 * [Node Interface (Flows)](/use-the-network/console/flows)
 * [Alerts](/use-the-network/console/alerts)
-* [Multiple Packets](/use-the-network/console/multi-packets)
+* [Packet Configurations](/use-the-network/console/multi-packets)
 * [Configuration Profiles (ADR, CF List, Receive Windows)](/use-the-network/console/profiles)
 
 ### Admin
