--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -1,18 +1,28 @@
 ---
 id: multi-packets
-sidebar_label: Multiple Packets
+sidebar_label: Packet Configurations
 slug: /use-the-network/console/multi-packets
 ---
 
-# Multiple Packets
+# Packet Configurations
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
+
+Packet Configurations allow users to specify settings that impact packet delivery.
+
+These Packet Configurations include Preferred Hotspot and Multiple Packets
+
+## Preferred Hotspots
+
+
+
+## Multiple Packets
 
 Data Credits are only spent for uplinks including initial join packets. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
 
 To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
 
-## Configuring Multiple Packets
+### Configuring Multiple Packets
 
 Configuring multiple packets for a device a group of devices involved two main steps:
 
