docs for marketplace
marketplace docs

--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -1,22 +1,12 @@
 ---
 id: multi-packets
-sidebar_label: Packet Configurations
+sidebar_label: Multiple Packets
 slug: /use-the-network/console/multi-packets
 ---
 
-# Packet Configurations
+# Multiple Packets 
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
-
-Packet Configurations allow users to specify settings that impact packet delivery.
-
-These Packet Configurations include Preferred Hotspot and Multiple Packets
-
-## Preferred Hotspots
-
-
-
-## Multiple Packets
 
 Data Credits are only spent for uplinks including initial join packets. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
 
