--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -11,17 +11,32 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 Integrations enable devices to connect to pre-configured, cloud-based
 applications or send data directly over HTTP or MQTT.
 
+Community Integrations have been submitted to the Console Marketplace, approved by the Helium Foundation and chosen by the Console Hosting Provider. 
+
+To learn more about the Console Marketplace and submitting an Integration, go [here](/use-the-network/console-marketplace).
+
+If an Integration is not available please contact your provider. By default, the Helium Foundation Console will enable all approved Integrations. 
+
+:::important
+
+Pre-Marketplace Integrations will continue to work as expected. However, devices or groups will need to connect to an Integration to benefit from future updates provided by the Integration developer. 
+
+:::
+
+
 For a video walkthrough of how to use Integrations, check out our Tips and Tricks video [here](https://youtu.be/lnERw1f7TGE).
 
 ## Add Integration
 
 To add a new integration, navigate to the **Integrations** page using the left
-side navigation, click the Add New Integration **+** and then select from the available integrations as shown below.
+side navigation, click the Add New Integration **+** and then select from the available integrations.
 Follow the specific integration guides below for more details.
 
 <img
   src={useBaseUrl("img/use-the-network/console/console-integrations-add.png")}
 />
+
+A number indicates that an Integration has been added. 
 
 ## Connecting Integrations to Devices
 
@@ -33,30 +48,30 @@ Quick video tutorial connecting devices to an integration [here](https://www.you
 
 Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
 
-[JSON Schema](/use-the-network/console/integrations/json-schema)
+- [JSON Schema](/use-the-network/console/integrations/json-schema)
 
-[HTTP](/use-the-network/console/integrations/http)
+- [HTTP](/use-the-network/console/integrations/http)
 
-[MQTT](/use-the-network/console/integrations/mqtt)
+- [MQTT](/use-the-network/console/integrations/mqtt)
 
-[Microsoft Azure IoT Hub/Central](/use-the-network/console/integrations/azure)
+- [Microsoft Azure IoT Hub/Central](/use-the-network/console/integrations/azure)
 
-[AWS IoT Core](/use-the-network/console/integrations/aws-iot-core)
+- [AWS IoT Core](/use-the-network/console/integrations/aws-iot-core)
 
-[Cargo](/use-the-network/console/integrations/cargo)
+- [Cargo](/use-the-network/console/integrations/cargo)
 
-[Datacake](/use-the-network/console/integrations/datacake)
+- [Datacake](/use-the-network/console/integrations/datacake)
 
-[MyDevices Cayenne](/use-the-network/console/integrations/mydevices-cayenne)
+- [MyDevices Cayenne](/use-the-network/console/integrations/mydevices-cayenne)
 
-[Adafruit IO](/use-the-network/console/integrations/adafruitio)
+- [Adafruit IO](/use-the-network/console/integrations/adafruitio)
 
-[Ubidots](/use-the-network/console/integrations/ubidots)
+- [Ubidots](/use-the-network/console/integrations/ubidots)
 
-[Tago.IO](/use-the-network/console/integrations/tago)
+- [Tago.IO](/use-the-network/console/integrations/tago)
 
-[Google Sheets](/use-the-network/console/integrations/google-sheets)
+- [Google Sheets](/use-the-network/console/integrations/google-sheets)
 
-[Microshare](/use-the-network/console/integrations/microshare)
+- [Microshare](/use-the-network/console/integrations/microshare)
 
-[Akenza](/use-the-network/console/integrations/akenza)
+- [Akenza](/use-the-network/console/integrations/akenza)
